fix some bugs: add html overflowHidden if isMobileMenu is open, typeanalsis & heroGate speeling mistakes

--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -3,16 +3,17 @@ nav.nav {
   align-items: center;
   justify-content: space-between;
   transition: all var(--transition-default);
+  margin-right: 1rem;
 
   @media (max-width: 768px) {
     backdrop-filter: blur(4px);
     position: absolute;
-    top: 71px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
     background-color: rgba(var(--black), 0.9);
-    z-index: 2;
+    z-index: -1;
     opacity: 0;
     visibility: hidden;
     transition: transform 0.4s ease, opacity 0.4s ease, visibility 0.4s;
@@ -33,7 +34,7 @@ nav.nav {
     list-style: none;
     margin: 0;
     padding: 0;
-    gap: 1.2rem;
+    gap: 2rem;
 
     @media (max-width: 768px) {
       flex-direction: column;
